[package]
name = "git-subtree-audit"
version = "1.0.0"
edition = "2021"
authors = ["yammy <yammy@example.com>"]
description = "A lightweight Git extension that verifies subtree merges automatically."
license = "MIT"
repository = "https://github.com/yanxue06/git-subtree-audit"
homepage = "https://github.com/yanxue06/git-subtree-audit"
readme = "README.md"
keywords = ["git", "subtree", "audit", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tempfile = "3"